--- a/angular-challenge/src/styles.css
+++ b/angular-challenge/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.7) 100%), url("assets/images/wallpaper.jpg");
+    background-repeat: repeat-y;
+    background-size: 100%;
+}
