--- a/angular-challenge/src/app/login/login.component.html
+++ b/angular-challenge/src/app/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<div class="card" [@fade]>
+  <div class="card-body">
+    <h2>Authenticate via Google</h2>
+    <hr />
+    <div class="col text-center">
+      <button type="submit" class="btn btn-primary btn-lg" (click)="onLogin()">
+        Google Authentication
+      </button>
+    </div>
+  </div>
+</div>
