--- a/angular-challenge/src/app/header/header.component.html
+++ b/angular-challenge/src/app/header/header.component.html
@@ -1,5 +1,3 @@
-<a [routerLink]="">
+<a [routerLink]="['/home/mycalendar']">
     <h2>Devoteam Calendar</h2>
 </a>
-  
-<button type="button" class="btn btn-outline-light">Logout</button>
