--- a/angular-challenge/src/styles.css
+++ b/angular-challenge/src/styles.css
@@ -4,3 +4,10 @@ body {
     background-repeat: repeat-y;
     background-size: 100%;
 }
+
+full-calendar {
+    color: white;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
