--- a/angular-challenge/src/app/secondary-calendars/secondary-calendars.component.html
+++ b/angular-challenge/src/app/secondary-calendars/secondary-calendars.component.html
@@ -1,1 +1,44 @@
-<p>secondary-calendars works!</p>
+<div [@fade]>
+  <div
+    class="row"
+    style="margin-top: 20px;">
+    <div class="column" style="width: 20%;">
+      <div class="row" style="margin-left: 10%;" *ngFor="let item of allCalendars">
+        <input
+          type="checkbox"
+          ngModel
+          name="dynamicData"
+          [id]="item.id"
+          [name]="item.name"
+          [value]="item.id"
+          style="width: 20px; height: 20px; border-radius: 50%;"
+          (change)="onChange($event)"
+        />
+        <label>&nbsp;{{ item.name }}</label>
+      </div>
+    </div>
+    <div class="column" style="width: 70%; margin-top: -25px">
+      <full-calendar *ngIf="rendered" [options]="calendarOptions"></full-calendar>
+    </div>
+  </div>
+</div>
+<ngx-spinner></ngx-spinner>
+<modal #eventModal>
+  <modal-header>
+    <h3>{{ selectedEvent?.title }}</h3>
+  </modal-header>
+
+  <modal-content>
+    <p>Invited by: {{ selectedEvent?.extendedProps?.creator?.email }}</p>
+    <p>
+      Hangouts link:
+      <a [href]="selectedEvent?.extendedProps?.hangoutLink">{{
+        selectedEvent?.extendedProps?.hangoutLink
+      }}</a>
+    </p>
+    <p>Location: {{ selectedEvent?.extendedProps?.location }}</p>
+    <p>Event status: {{ selectedEvent?.extendedProps?.status }}</p>
+    <p>Event starting at: {{selectedEvent?.start | date: 'medium'}}</p>
+    <p>Event ending at: {{selectedEvent?.end | date: 'medium'}}</p>
+  </modal-content>
+</modal>
